--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     },
     "repository": {
       "type": "git",
-      "url": "git+https://github.com/cyclic-software/starter-express-api.git"
+      "url": "git+https://github.com/B-Devy/df.git"
     },
     "author": "",
     "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/cyclic-software/starter-express-api/issues"
-    },
-    "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
+    
     "dependencies": {
-      "express": "^4.18.2"
+      
     }
   }
